create username & pw register functionality

--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb://127.0.0.1:27017/airbnb"
+DATABASE_URL="mongodb+srv://prsthibha:273whXuiqPevRM8Y@cluster0.cn7mlpn.mongodb.net/airbnb?retryWrites=true&w=majority"
+NEXTAUTH_SECRET='NEXTAUTH_SECRET'
