Add oAuth functionality

--- a/.env
+++ b/.env
@@ -6,3 +6,9 @@
 
 DATABASE_URL="mongodb+srv://prsthibha:273whXuiqPevRM8Y@cluster0.cn7mlpn.mongodb.net/airbnb?retryWrites=true&w=majority"
 NEXTAUTH_SECRET='NEXTAUTH_SECRET'
+
+GITHUB_ID=4a1287612a4f74a3711f
+GITHUB_SECRET=8ddc58900abce34819be7d5ebc85d17726646d74
+
+GOOGLE_CLIENT_ID=222127427262-dhahpc7iq7b6crtdg5thvi64jv7e8t8j.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
