--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
     "react-icons": "^4.10.1",
+    "react-select": "^5.7.4",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6",
+    "world-countries": "^4.0.0",
     "zod": "^3.21.4",
     "zustand": "^4.3.9"
   },
