--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.259.0",
     "next": "13.4.9",
     "next-auth": "^4.22.1",
@@ -31,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
     "react-icons": "^4.10.1",
+    "react-leaflet": "^4.2.1",
     "react-select": "^5.7.4",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
@@ -42,6 +44,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/leaflet": "^1.9.3",
     "prettier-plugin-prisma": "^4.13.0",
     "prisma": "^5.0.0"
   }
