Add cloudinary image upload functionality

--- a/.env
+++ b/.env
@@ -12,3 +12,5 @@ GITHUB_SECRET=8ddc58900abce34819be7d5ebc85d17726646d74
 
 GOOGLE_CLIENT_ID=222127427262-dhahpc7iq7b6crtdg5thvi64jv7e8t8j.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME='prathibha97'
