--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "postcss": "8.4.25",
     "query-string": "^8.1.0",
     "react": "18.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
     "react-icons": "^4.10.1",
@@ -47,6 +48,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/leaflet": "^1.9.3",
+    "@types/react-date-range": "^1.4.4",
     "prettier-plugin-prisma": "^4.13.0",
     "prisma": "^5.0.0"
   }
