--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-icons": "^4.10.1",
     "react-leaflet": "^4.2.1",
     "react-select": "^5.7.4",
+    "react-spinners": "^0.13.8",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
